--- a/mainstyle.scss
+++ b/mainstyle.scss
@@ -1,10 +1,13 @@
+body, p, h1, h2, h3 {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: rgb(255,255,255);
     font-family: 'Josefin Sans', sans-serif;
     color: rgb(29,59,42);
     font-size: 18px;
-    margin: 0;
-    padding: 0;
 }
 
 h1 {
@@ -18,9 +21,17 @@ h2 {
     color: rgb(29,59,42);
 }
 
+.main {
+    display: flex;
+    flex-direction: column;
+    width: 1060px;
+    margin: 0 auto;
+}
+
 .top {
     display: flex;
     justify-content: space-between;
+    padding: 25px 0 35px;
 
     header {
         a {
@@ -44,12 +55,12 @@ h2 {
         display: flex;
         flex-direction: column;
         align-items: flex-end;
-        gap: 10px;
+        gap: 20px;
         
         a {
             text-decoration: none;
             color: rgb(29,59,42);
-            padding-left: 10px;
+            padding-left: 25px;
         }
 
         a:hover {
@@ -74,7 +85,7 @@ aside {
         display: flex;
         flex-direction: column;
         right: 40px;
-        top: 120px;
+        top: 185px;
 
         a {
             padding: 5px;
@@ -89,7 +100,7 @@ aside {
         position: fixed;
         bottom: 0;
         right: 20px;
-        box-shadow: 0 0 3px rgb(172, 172, 172);
+        box-shadow: 0 0 3px rgba(255,255,255, 0.5);
 
         p {
             margin: 16px 45px;
@@ -105,21 +116,18 @@ aside {
 
 }
 
-.main {
-    display: flex;
-    flex-direction: column;
-    width: 1050px;
-    margin: 0 auto;
-}
-
 .bottom {
     background-color: rgb(29,59,42);
+    padding-top: 300px;
 
     .menu {
         display: flex;
         justify-content: space-between;
-        width: 1050px;
+        align-items: baseline;
+        width: 1060px;
         margin: 0 auto;
+        border-top: 1px solid white;
+        padding: 80px 20px 60px;
 
         .title {
             a {
@@ -134,7 +142,7 @@ aside {
                 p {
                     color: rgb(255,255,255);
                     margin-top: 0;
-                    font-size: 16px;
+                    font-size: 18px;
                 }
             }
         }
@@ -143,22 +151,32 @@ aside {
             display: flex;
             flex-direction: column;
             align-items: flex-end;
-            gap: 10px;
+            gap: 30px;
             
             a {
                 text-decoration: none;
                 color: rgb(255,255,255);
-                padding-left: 10px;
+                padding-left: 25px;
             }
 
             a:hover {
                 color: rgb(207, 224, 215);
             }
         }
+
+        .socials {
+            color: rgb(255,255,255);
+            font-size: 20px;
+
+            a {
+                padding-left: 10px;
+            }
+        }
     }
 }
 
 footer {
-    font-size: 15px;
-
+    color: black;
+    font-size: 16px;
+    padding: 25px 100px;
 }
