--- a/mainstyle.css
+++ b/mainstyle.css
@@ -6,7 +6,7 @@ body, p, h1, h2, h3 {
 body {
   background-color: rgb(255, 255, 255);
   font-family: "Josefin Sans", sans-serif;
-  color: rgb(29, 59, 42);
+  color: black;
   font-size: 18px;
 }
 
@@ -16,9 +16,19 @@ h1 {
   font-size: 27px;
 }
 
-h2 {
+h2, h3, h4 {
   font-family: "Caudex", serif;
   color: rgb(29, 59, 42);
+  font-weight: normal;
+  margin-bottom: 25px;
+}
+
+h2 {
+  font-size: 42px;
+}
+
+h3 {
+  font-size: 24px;
 }
 
 .main {
@@ -73,7 +83,7 @@ aside .socials {
   display: flex;
   flex-direction: column;
   right: 40px;
-  top: 185px;
+  top: 180px;
 }
 aside .socials a {
   padding: 5px;
@@ -96,6 +106,12 @@ aside .chatbox p::before {
   content: "\f27a";
   margin-right: 10px;
   font-size: 22px;
+}
+
+main p {
+  font-size: 18px;
+  line-height: 1.3;
+  margin-bottom: 20px;
 }
 
 .bottom {
