--- a/pricingstyle.css
+++ b/pricingstyle.css
@@ -1,1 +1,242 @@
-/*# sourceMappingURL=pricingstyle.css.map */
+body, p, h1, h2, h3, li, ul {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: rgb(255, 255, 255);
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 18px;
+}
+
+h1 {
+  font-family: "Alex Brush", cursive;
+  color: rgb(12, 30, 47);
+  font-size: 27px;
+}
+
+h2, h3, h4 {
+  font-family: "Caudex", serif;
+  color: rgb(29, 59, 42);
+  font-weight: normal;
+}
+
+h2 {
+  font-size: 42px;
+}
+
+h3 {
+  font-size: 20px;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  width: 1060px;
+  margin: 0 auto;
+}
+
+.top {
+  display: flex;
+  justify-content: space-between;
+  padding: 25px 0 35px;
+}
+.top header a {
+  text-decoration: none;
+  text-align: center;
+}
+.top header a h1 {
+  color: rgb(29, 59, 42);
+  margin-bottom: 5px;
+}
+.top header a p {
+  color: rgb(29, 59, 42);
+  margin-top: 0;
+  font-size: 16px;
+}
+.top nav {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 20px;
+}
+.top nav a {
+  text-decoration: none;
+  color: rgb(29, 59, 42);
+  padding-left: 25px;
+}
+.top nav a:hover {
+  color: rgb(72, 118, 92);
+}
+.top .login p::before {
+  font-family: "FontAwesome";
+  content: "\f2bd";
+  color: black;
+  margin-right: 10px;
+  font-size: 22px;
+}
+
+aside .socials {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  right: 40px;
+  top: 180px;
+}
+aside .socials a {
+  padding: 5px;
+  color: black;
+}
+aside .chatbox {
+  background-color: rgb(29, 59, 42);
+  color: rgb(255, 255, 255);
+  display: flex;
+  position: fixed;
+  bottom: 0;
+  right: 20px;
+  box-shadow: 0 0 3px rgba(255, 255, 255, 0.5);
+}
+aside .chatbox p {
+  margin: 16px 45px;
+}
+aside .chatbox p::before {
+  font-family: "FontAwesome";
+  content: "\f27a";
+  margin-right: 10px;
+  font-size: 22px;
+}
+
+main p {
+  font-size: 16px;
+  line-height: 1.3;
+  color: black;
+}
+main .title {
+  text-align: center;
+  padding: 50px 0;
+}
+main .title h2 {
+  margin-bottom: 15px;
+}
+main .pricingPlans {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 20px 50px 120px;
+  -moz-column-gap: 32px;
+       column-gap: 32px;
+}
+main .pricingPlans .plan, main .pricingPlans .benefits {
+  border: 1px solid black;
+  text-align: center;
+  padding: 30px;
+}
+main .pricingPlans .plan {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 20px;
+}
+main .pricingPlans li {
+  list-style-type: none;
+  padding: 10px 0;
+  font-size: 14px;
+}
+main .pricingPlans li::before {
+  font-family: "FontAwesome";
+  content: "\f058";
+  padding-right: 10px;
+  color: rgb(57, 85, 69);
+}
+main .pricingPlans p {
+  font-size: 14px;
+}
+main .pricingPlans .pricing {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+main .pricingPlans .price {
+  font-size: 80px;
+}
+main .pricingPlans .planFocus {
+  background-color: rgb(201, 216, 191);
+  position: relative;
+}
+main .pricingPlans .bestValue {
+  background-color: rgb(29, 59, 42);
+  color: white;
+  position: absolute;
+  top: -15px;
+  left: 110px;
+  font-size: 14px;
+  padding: 8px 10px;
+}
+main .pricingPlans .benefitFocus {
+  background-color: rgb(29, 59, 42);
+  color: white;
+}
+main .pricingPlans .benefitFocus li:before {
+  color: white;
+}
+main .pricingPlans button {
+  background-color: rgb(29, 59, 42);
+  border: none;
+  color: white;
+  font-size: 14px;
+  padding: 12px 90px;
+}
+main .pricingPlans button:hover {
+  background-color: rgb(72, 118, 92);
+}
+
+.bottom {
+  background-color: rgb(29, 59, 42);
+}
+.bottom .menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  width: 1060px;
+  margin: 0 auto;
+  padding: 80px 20px 60px;
+}
+.bottom .menu .title a {
+  text-decoration: none;
+  text-align: center;
+}
+.bottom .menu .title a h1 {
+  color: rgb(255, 255, 255);
+  margin-bottom: 5px;
+}
+.bottom .menu .title a p {
+  color: rgb(255, 255, 255);
+  margin-top: 0;
+  font-size: 18px;
+}
+.bottom .menu nav {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 30px;
+}
+.bottom .menu nav a {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  padding-left: 25px;
+}
+.bottom .menu nav a:hover {
+  color: rgb(207, 224, 215);
+}
+.bottom .menu .socials {
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+}
+.bottom .menu .socials a {
+  padding-left: 10px;
+}
+
+footer {
+  color: black;
+  font-size: 16px;
+  padding: 25px 100px;
+}/*# sourceMappingURL=pricingstyle.css.map */
