--- a/servicesstyle.css
+++ b/servicesstyle.css
@@ -131,7 +131,7 @@ main .services .item {
   border: 1px solid rgb(201, 216, 191);
 }
 main .services img {
-  width: 290px;
+  height: 100%;
   opacity: 1;
 }
 main .services img:hover {
