flex adjustments, main added

--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -33,7 +33,8 @@ h3 {
 .main {
   display: flex;
   flex-direction: column;
-  width: 1060px;
+  max-width: 1060px;
+  min-width: 900px;
   margin: 0 auto;
 }
 
@@ -116,7 +117,13 @@ main p {
 main .title {
   background-color: rgb(201, 216, 191);
   text-align: center;
-  padding: 70px 230px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 70px 0;
+}
+main .titleWrapper {
+  width: 600px;
 }
 main .about {
   display: flex;
@@ -124,19 +131,28 @@ main .about {
 main .about .portrait {
   background-color: rgb(29, 59, 42);
   flex: 1;
-  padding: 150px 65px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 150px 0;
 }
 main .about .portrait img {
-  height: 300px;
+  width: 402px;
 }
 main .about .aboutAuthor {
   flex: 1;
-  margin: 80px 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+main .about .aboutAuthor .text {
+  width: 402px;
 }
 main .photos {
   display: flex;
   justify-content: space-between;
   padding: 130px 0;
+  gap: 20px;
 }
 main .photos .one {
   height: 370px;
@@ -147,7 +163,7 @@ main .photos .two {
   align-self: start;
 }
 main .photos .three {
-  height: 459px;
+  max-width: 510px;
   align-self: end;
   margin-top: 100px;
 }
@@ -183,7 +199,8 @@ main .specialties .specialtyItems p:first-child {
   display: flex;
   justify-content: space-between;
   align-items: baseline;
-  width: 1060px;
+  max-width: 1060px;
+  min-width: 800px;
   margin: 0 auto;
   padding: 80px 20px 60px;
 }
