--- a/pricingstyle.scss
+++ b/pricingstyle.scss
@@ -9,6 +9,11 @@ body {
     font-size: 18px;
 }
 
+button {
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 16px;
+}
+
 h1 {
     font-family: 'Alex Brush', cursive;
     color: rgb(12,30,47);
@@ -32,7 +37,8 @@ h3 {
 .main {
     display: flex;
     flex-direction: column;
-    width: 1060px;
+    max-width: 1060px;
+    min-width: 900px;
     margin: 0 auto;
 }
 
@@ -214,10 +220,11 @@ main {
 
         button {
             background-color:  rgb(29,59,42);
-            border: none;
+            border: 1px solid black;
             color: white;
             font-size: 14px;
             padding: 12px 90px;
+            transition: 0.3s;
         }
 
         button:hover {
@@ -234,7 +241,8 @@ main {
         display: flex;
         justify-content: space-between;
         align-items: baseline;
-        width: 1060px;
+        max-width: 1060px;
+        min-width: 800px;
         margin: 0 auto;
         padding: 80px 20px 60px;
 
