--- a/servicesstyle.css
+++ b/servicesstyle.css
@@ -9,6 +9,11 @@ body {
   font-size: 18px;
 }
 
+button {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 16px;
+}
+
 h1 {
   font-family: "Alex Brush", cursive;
   color: rgb(12, 30, 47);
@@ -33,7 +38,8 @@ h3 {
 .main {
   display: flex;
   flex-direction: column;
-  width: 1060px;
+  max-width: 1060px;
+  min-width: 900px;
   margin: 0 auto;
 }
 
@@ -116,7 +122,13 @@ main p {
 main .title {
   background-color: rgb(201, 216, 191);
   text-align: center;
-  padding: 70px 230px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 70px 0;
+}
+main .titleWrapper {
+  width: 600px;
 }
 main .services {
   display: grid;
@@ -133,6 +145,7 @@ main .services .item {
 main .services img {
   height: 100%;
   opacity: 1;
+  transition: 0.3s;
 }
 main .services img:hover {
   opacity: 0.8;
@@ -158,6 +171,7 @@ main .services .description button {
   background-color: rgb(29, 59, 42);
   color: white;
   border: none;
+  transition: 0.3s;
 }
 main .services .description button:hover {
   background-color: rgb(57, 85, 69);
@@ -170,7 +184,8 @@ main .services .description button:hover {
   display: flex;
   justify-content: space-between;
   align-items: baseline;
-  width: 1060px;
+  max-width: 1060px;
+  min-width: 800px;
   margin: 0 auto;
   padding: 80px 20px 60px;
 }
