--- a/servicesstyle.scss
+++ b/servicesstyle.scss
@@ -9,6 +9,11 @@ body {
     font-size: 18px;
 }
 
+button {
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 16px;
+}
+
 h1 {
     font-family: 'Alex Brush', cursive;
     color: rgb(12,30,47);
@@ -33,7 +38,8 @@ h3 {
 .main {
     display: flex;
     flex-direction: column;
-    width: 1060px;
+    max-width: 1060px;
+    min-width: 900px;
     margin: 0 auto;
 }
 
@@ -137,7 +143,14 @@ main {
     .title{
         background-color: rgb(201,216,191);
         text-align: center;
-        padding: 70px 230px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 70px 0;
+    }
+
+    .titleWrapper {
+        width: 600px;
     }
 
     .services {
@@ -156,6 +169,7 @@ main {
         img {
             height: 100%;
             opacity: 1; 
+            transition: 0.3s;
         }
 
         img:hover {
@@ -186,6 +200,7 @@ main {
                 background-color: rgb(29,59,42);
                 color: white;
                 border: none;
+                transition: 0.3s;
             }
 
             button:hover {
@@ -202,7 +217,8 @@ main {
         display: flex;
         justify-content: space-between;
         align-items: baseline;
-        width: 1060px;
+        max-width: 1060px;
+        min-width: 800px;
         margin: 0 auto;
         padding: 80px 20px 60px;
 
