--- a/servicesstyle.scss
+++ b/servicesstyle.scss
@@ -153,12 +153,16 @@ main {
         width: 600px;
     }
 
+    .servicesWrapper {
+        display: flex;
+        justify-content: center;
+    }
+
     .services {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr;
-        padding: 20px;
-        margin: 30px 40px 80px;
+        margin: 50px 0 80px;
         justify-items: center;
         gap: 32px;
 
