--- a/blogstyle.css
+++ b/blogstyle.css
@@ -1,1 +1,271 @@
-/*# sourceMappingURL=blogstyle.css.map */
+body, p, h1, h2, h3 {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: rgb(255, 255, 255);
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 18px;
+}
+
+button {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 16px;
+}
+
+h1 {
+  font-family: "Alex Brush", cursive;
+  color: rgb(12, 30, 47);
+  font-size: 27px;
+}
+
+h2, h3, h4 {
+  font-family: "Caudex", serif;
+  color: rgb(29, 59, 42);
+  font-weight: normal;
+  margin-bottom: 25px;
+}
+
+h2 {
+  font-size: 42px;
+}
+
+h3 {
+  font-size: 24px;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  max-width: 1060px;
+  min-width: 900px;
+  margin: 0 auto;
+}
+
+.top {
+  display: flex;
+  justify-content: space-between;
+  padding: 25px 0 35px;
+}
+.top header a {
+  text-decoration: none;
+  text-align: center;
+}
+.top header a h1 {
+  color: rgb(29, 59, 42);
+  margin-bottom: 5px;
+}
+.top header a p {
+  color: rgb(29, 59, 42);
+  margin-top: 0;
+  font-size: 16px;
+}
+.top nav {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 20px;
+}
+.top nav a {
+  text-decoration: none;
+  color: rgb(29, 59, 42);
+  padding-left: 25px;
+}
+.top nav a:hover {
+  color: rgb(72, 118, 92);
+}
+.top .login p::before {
+  font-family: "FontAwesome";
+  content: "\f2bd";
+  color: black;
+  margin-right: 10px;
+  font-size: 22px;
+}
+
+aside .socials {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  right: 40px;
+  top: 180px;
+}
+aside .socials a {
+  padding: 5px;
+  color: black;
+}
+aside .chatbox {
+  background-color: rgb(29, 59, 42);
+  color: rgb(255, 255, 255);
+  display: flex;
+  position: fixed;
+  bottom: 0;
+  right: 20px;
+  box-shadow: 0 0 3px rgba(255, 255, 255, 0.5);
+}
+aside .chatbox p {
+  margin: 16px 45px;
+}
+aside .chatbox p::before {
+  font-family: "FontAwesome";
+  content: "\f27a";
+  margin-right: 10px;
+  font-size: 22px;
+}
+
+main p {
+  font-size: 18px;
+  line-height: 1.3;
+  margin-bottom: 20px;
+  color: black;
+}
+main .title {
+  background-color: rgb(201, 216, 191);
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 70px 0;
+}
+main .titleWrapper {
+  width: 600px;
+}
+main .servicesWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+main .services {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  margin: 30px 0 80px;
+  justify-items: center;
+  gap: 32px;
+}
+main .services .item {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  border: 1px solid rgb(201, 216, 191);
+  width: 292px;
+}
+main .services .item .photo {
+  flex: 1;
+}
+main .services .item .photo img {
+  width: 100%;
+}
+main .services .item .postContent {
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex: 1;
+}
+main .services .item .postContent .user {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+main .services .item .postContent .user .userWrapper {
+  display: flex;
+}
+main .services .item .postContent .user .userWrapper img {
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+}
+main .services .item .postContent .user .userWrapper .text {
+  padding-left: 10px;
+}
+main .services .item .postContent .postHeading {
+  display: flex;
+  flex-direction: column;
+}
+main .services .item .postContent p {
+  font-size: 12px;
+  margin-bottom: 5px;
+}
+main .services .item .postContent h3 {
+  margin-bottom: 10px;
+  font-size: 22px;
+}
+main .services .item .postContent .comment {
+  display: flex;
+  font-size: 16px;
+  justify-content: space-between;
+  border-top: 1px solid rgb(201, 216, 191);
+  padding-top: 20px;
+}
+main .services .item .postContent .comment .left {
+  display: flex;
+  gap: 20px;
+}
+main .services .item .postContent .comment span {
+  font-size: 10px;
+  padding-left: 3px;
+  font-weight: 100;
+}
+main .services .item .postContent .comment .fa-heart {
+  color: red;
+  transition: 0.3s;
+}
+main .services .item .postContent .comment .fa-heart:hover {
+  font-family: "FontAwesome";
+  content: "\f004";
+}
+
+.bottom {
+  background-color: rgb(29, 59, 42);
+}
+.bottom .menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  max-width: 1060px;
+  min-width: 800px;
+  margin: 0 auto;
+  padding: 80px 20px 60px;
+}
+.bottom .menu .title a {
+  text-decoration: none;
+  text-align: center;
+}
+.bottom .menu .title a h1 {
+  color: rgb(255, 255, 255);
+  margin-bottom: 5px;
+}
+.bottom .menu .title a p {
+  color: rgb(255, 255, 255);
+  margin-top: 0;
+  font-size: 18px;
+}
+.bottom .menu nav {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 30px;
+}
+.bottom .menu nav a {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  padding-left: 25px;
+}
+.bottom .menu nav a:hover {
+  color: rgb(207, 224, 215);
+}
+.bottom .menu .socials {
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+}
+.bottom .menu .socials a {
+  padding-left: 10px;
+}
+
+footer {
+  color: black;
+  font-size: 16px;
+  padding: 25px 100px;
+}/*# sourceMappingURL=blogstyle.css.map */
